# HaciendaAI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: check-norma-drift.yml  ci.yml  corpus-freshness.yml  index-vector-store.yml  ingest-boe.yml  ingest-cendoj.yml  ingest-dgt.yml  ingest-manuals-aeat.yml  ingest-teac.yml  verify-seed.yml
docs/: arquitectura.md  auditoria-repositorio.md  como-ejecutar.md  corpus-autonomico.md  cuota-irpf.md  fuentes-oficiales.md  golden-dataset.md  modelo-datos-fiscales.md  motor-reglas.md  rag.md  rgpd-logging.md  roadmap.md  seguridad-privacidad.md
docs/seeds/: README.md  cendoj-eclis.txt  dgt-consultas.txt  teac-resoluciones.txt
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/src/: App.tsx  api.ts  exampleProfile.ts  main.tsx  types.ts
frontend/src/components/: ApiConfigBar.tsx  EvaluationResults.tsx  ProfileForm.tsx  ProfileWizard.tsx  SimulationView.tsx
frontend/src/hooks/: useProfilePersistence.ts
frontend/src/styles/: index.css
frontend/tests/e2e/: flow.spec.ts
scripts/: check_corpus_freshness.py  check_norma_drift.py  index_vector_store.py  ingest_boe.py  ingest_cendoj.py  ingest_dgt.py  ingest_manual_aeat.py  ingest_teac.py  verify_seed.py
src/hacienda_ai/: __init__.py  api.py  cli.py  deductions.py  fiscal_calendar.py  logging_setup.py  models.py  normas.py  opportunities.py  rules.py  safety.py  simulator.py  tax_calculation.py
src/hacienda_ai/api/: __init__.py  __main__.py  app.py  pdf.py
src/hacienda_ai/chat/: __init__.py  client.py  orchestrator.py  prompts.py  retriever.py  tools.py
src/hacienda_ai/irpf/: __init__.py  (+2 more)
tests/: test_api.py  test_article_version.py  test_article_version_drift.py  test_boe_client.py  test_boe_document.py  test_boe_summary.py  test_ccaa_coverage.py  test_chat_orchestrator.py  test_chat_tools.py  test_citation_guard.py  test_cli.py  test_consolidated_articles.py  test_consolidated_drift.py  test_consolidated_fetcher.py  test_consolidated_runner.py  test_consolidated_runner_article.py  test_consolidated_snapshot.py  test_consulta_dgt_model.py  test_corpus_autonomicas.py  test_corpus_bonificaciones.py  test_corpus_freshness.py  test_corpus_lote1.py  test_corpus_lote2.py  test_corpus_lote3.py  test_deductions.py  test_dgt_extractors.py  test_dgt_numero.py  test_dgt_parser.py  test_dgt_runner.py  test_ecli.py  test_embedded_chunk_model.py  test_fiscal_calendar.py  test_golden.py  test_grounding.py  test_hybrid_retrieval.py  test_impact.py  test_incompatibilities.py  test_ingest_index.py  test_ingestion_pipeline.py  test_iva.py  (+41 more)
tests/golden/: 01_empleado_madrid_1hijo_2024.json  02_pareja_conjunta_biparental_2hijos_2024.json  03_monoparental_maternidad_2024.json  04_discapacidad_severa_con_asistencia_2024.json  05_familia_numerosa_especial_4hijos_2024.json  06_donativos_49_2002_fidelizado_2024.json  07_dt18_vivienda_pre_2013_2024.json  08_eficiencia_energetica_rehabilitacion_2024.json  09_empleado_madrid_2hijos_2025.json  10_empleado_sevilla_2024.json  11_joven_alquiler_madrid_2024.json  12_devengo_historico_2018.json  _README.md
(+144 files in other folders)
