[project]
name = "hacienda-ai"
version = "0.1.0"
description = "Copiloto Fiscal IRPF España auditable y basado en reglas"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "weasyprint>=60",
    "anthropic>=0.40",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "weasyprint>=60",
    "httpx>=0.27",
    "anthropic>=0.40",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hacienda_ai" = [
    "data/deductions/*.json",
    "data/escalas/*.json",
    "data/normas/*.json",
    "api/static/*.html",
]
